--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-    "browser-sync": "^1.3.7",
+    "browser-sync": "^1.6.2",
     "browserify": "^5.12.0",
+    "del": "^0.1.3",
     "domready": "^1.0.7",
-    "gulp": "^3.8.8",
+    "gulp": "^3.8.9",
     "gulp-assemble": "^0.1.7",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-clean": "^0.3.1",
