--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
-    "browser-sync": "^1.6.2",
-    "browserify": "^5.12.0",
+    "bindpolyfill": "0.0.0",
+    "browser-sync": "^1.9.0",
+    "browserify": "^8.1.0",
     "del": "^0.1.3",
     "domready": "^1.0.7",
     "gulp": "^3.8.9",
@@ -17,7 +18,7 @@
     "gulp-uglify": "^1.0.1",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.3.0",
-    "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll",
+    "smooth-scroll": "^1.5.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
