--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "devDependencies": {
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^1.9.0",
-    "browserify": "^8.1.0",
-    "del": "^0.1.3",
+    "browser-sync": "^2.0.0-rc6",
+    "browserify": "^8.1.3",
+    "browserify-shim": "^3.8.2",
+    "del": "^1.1.1",
     "domready": "^1.0.7",
-    "gulp": "^3.8.9",
+    "gulp": "^3.8.10",
     "gulp-assemble": "^0.1.7",
-    "gulp-autoprefixer": "^1.0.1",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-clean": "^0.3.1",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-load-plugins": "^0.6.0",
-    "gulp-plumber": "^0.6.5",
-    "gulp-sass": "^0.7.3",
+    "gulp-imagemin": "^2.1.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-sass": "^1.3.2",
     "gulp-streamify": "0.0.5",
-    "gulp-svg-sprites": "^1.0.3",
-    "gulp-uglify": "^1.0.1",
+    "gulp-svg-sprites": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
     "handlebars-helpers": "^0.5.8",
-    "imager.js": "^0.3.0",
+    "imager.js": "^0.5.0",
+    "slick-carousel": "^1.4.0",
     "smooth-scroll": "^1.5.0",
     "vinyl-source-stream": "^1.0.0"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "jquery": "global:$"
   }
 }
