--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "devDependencies": {
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.0.0-rc6",
-    "browserify": "^8.1.3",
-    "browserify-shim": "^3.8.2",
+    "browser-sync": "^2.2.1",
+    "browserify": "^9.0.3",
+    "browserify-shim": "^3.8.3",
     "del": "^1.1.1",
     "domready": "^1.0.7",
-    "gulp": "^3.8.10",
-    "gulp-assemble": "^0.1.7",
+    "gulp": "^3.8.11",
+    "gulp-assemble": "^0.2.3",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-clean": "^0.3.1",
-    "gulp-imagemin": "^2.1.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
-    "gulp-sass": "^1.3.2",
+    "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
     "gulp-svg-sprites": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.5.0",
-    "slick-carousel": "^1.4.0",
+    "slick-carousel": "^1.4.1",
     "smooth-scroll": "^1.5.0",
     "vinyl-source-stream": "^1.0.0"
   },
