--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "browser-sync": "^2.2.1",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
+    "critical": "^0.5.6",
     "del": "^1.1.1",
     "domready": "^1.0.7",
     "gulp": "^3.8.11",
@@ -13,6 +14,7 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
     "gulp-svg-sprites": "^2.0.1",
