trying to move the css inline

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "assemble": "^0.6.0-beta.2",
+    "assemble-mustache": "^0.2.1",
     "bindpolyfill": "0.0.0",
     "browser-sync": "^2.3.1",
     "browserify": "^9.0.3",
@@ -10,7 +12,6 @@
     "gulp": "^3.8.11",
     "gulp-assemble": "^0.3.1",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-clean": "^0.3.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.8.1",
     "gulp-plumber": "^1.0.0",
@@ -23,6 +24,7 @@
     "imager.js": "^0.5.0",
     "slick-carousel": "^1.4.1",
     "smooth-scroll": "^1.5.0",
+    "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
