--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "critical": "^0.5.6",
     "del": "^1.1.1",
     "domready": "^1.0.7",
+    "flickity": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-assemble": "^0.3.1",
     "gulp-autoprefixer": "^2.1.0",
