--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^1.1.1",
     "domready": "^1.0.7",
     "flickity": "^1.0.0",
+    "flickity-imagesloaded": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-assemble": "^0.3.1",
     "gulp-autoprefixer": "^2.1.0",
@@ -23,6 +24,7 @@
     "gulp-uglify": "^1.1.0",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.5.0",
+    "lazysizes": "^1.0.1",
     "picturefill": "^2.3.0",
     "slick-carousel": "^1.4.1",
     "smooth-scroll": "^1.5.0",
