--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
+    "gulp-svg-sprite": "^1.1.1",
     "gulp-svg-sprites": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "handlebars-helpers": "^0.5.8",
@@ -25,6 +26,7 @@
     "picturefill": "^2.3.0",
     "slick-carousel": "^1.4.1",
     "smooth-scroll": "^1.5.0",
+    "vinyl": "^0.4.6",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
