--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "devDependencies": {
-    "assemble": "^0.6.0-beta.2",
+    "assemble": "^0.4.42",
     "assemble-mustache": "^0.2.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.3.1",
-    "browserify": "^9.0.3",
-    "browserify-shim": "^3.8.3",
-    "critical": "^0.5.6",
+    "browser-sync": "^2.6.4",
+    "browserify": "^9.0.8",
+    "browserify-shim": "^3.8.5",
+    "critical": "^0.5.7",
     "del": "^1.1.1",
     "domready": "^1.0.7",
     "gulp": "^3.8.11",
-    "gulp-assemble": "^0.3.1",
-    "gulp-autoprefixer": "^2.1.0",
+    "gulp-assemble": "^0.3.2",
+    "gulp-autoprefixer": "^2.2.0",
     "gulp-imagemin": "^2.2.1",
-    "gulp-load-plugins": "^0.8.1",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
-    "gulp-svg-sprite": "^1.1.1",
+    "gulp-svg-sprite": "^1.1.2",
     "gulp-svg-sprites": "^2.0.1",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "^1.2.0",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.5.0",
-    "picturefill": "^2.3.0",
-    "slick-carousel": "^1.4.1",
+    "picturefill": "^2.3.1",
+    "slick-carousel": "^1.5.1",
     "smooth-scroll": "^1.5.0",
+    "svg-sprite": "^1.1.2",
     "vinyl": "^0.4.6",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
