--- a/package.json
+++ b/package.json
@@ -25,16 +25,13 @@
     "gulp-uglify": "^1.2.0",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.5.0",
-    "picturefill": "^2.3.1",
-    "slick-carousel": "^1.5.1",
-    "smooth-scroll": "^1.5.0",
-    "svg-sprite": "^1.1.2",
-    "vinyl": "^0.4.6",
     "lazysizes": "^1.0.1",
     "picturefill": "^2.3.0",
     "slick-carousel": "^1.4.1",
     "smooth-scroll": "^1.5.0",
     "svg-sprite": "^1.1.2",
+    "svg4everybody": "0.0.2",
+    "vinyl": "^0.4.6",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
