--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "devDependencies": {
-    "assemble": "^0.4.42",
+    "assemble": "^0.6.0-beta.5",
     "assemble-mustache": "^0.2.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.6.4",
-    "browserify": "^9.0.8",
-    "browserify-shim": "^3.8.5",
+    "browser-sync": "^2.7.6",
+    "browserify": "^10.2.1",
+    "browserify-shim": "^3.8.7",
     "critical": "^0.5.7",
-    "del": "^1.1.1",
-    "domready": "^1.0.7",
-    "flickity": "^1.0.0",
+    "del": "^1.2.0",
+    "domready": "^1.0.8",
+    "flickity": "^1.0.2",
     "flickity-imagesloaded": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-assemble": "^0.3.2",
-    "gulp-autoprefixer": "^2.2.0",
+    "gulp-autoprefixer": "^2.3.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-plumber": "^1.0.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.1",
     "gulp-streamify": "0.0.5",
     "gulp-svg-sprite": "^1.1.2",
     "gulp-svg-sprites": "^2.0.1",
     "gulp-uglify": "^1.2.0",
     "handlebars-helpers": "^0.5.8",
     "imager.js": "^0.5.0",
-    "lazysizes": "^1.0.1",
-    "picturefill": "^2.3.0",
-    "slick-carousel": "^1.4.1",
+    "lazysizes": "^1.1.2",
+    "picturefill": "^2.3.1",
+    "slick-carousel": "^1.5.5",
     "smooth-scroll": "^1.5.0",
     "svg-sprite": "^1.1.2",
     "svg4everybody": "0.0.2",
