--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^1.2.0",
     "domready": "^1.0.8",
     "flickity-imagesloaded": "^1.0.0",
+    "grunt": "^0.4.5",
     "gulp": "^3.8.11",
     "gulp-assemble": "^0.3.2",
     "gulp-autoprefixer": "^2.3.0",
@@ -23,6 +24,7 @@
     "imager.js": "^0.5.0",
     "lazysizes": "^1.1.2",
     "picturefill": "^2.3.1",
+    "reinstall": "^1.1.0",
     "smooth-scroll": "^1.5.0",
     "svg-sprite": "^1.1.2",
     "svg4everybody": "0.0.2",
