--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "picturefill": "^2.3.1",
     "postcss": "^4.1.16",
     "postcss-discard-comments": "^1.2.0",
+    "postcss-import": "^6.2.0",
+    "postcss-mixins": "^0.4.0",
+    "postcss-simple-vars": "^0.3.0",
     "precss": "^0.2.2",
     "reinstall": "^1.1.0",
     "svg-sprite": "^1.2.6",
