--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify": "^1.2.0",
     "imager.js": "^0.5.0",
     "lazysizes": "^1.1.2",
+    "moment": "^2.10.6",
     "picturefill": "^2.3.1",
     "reinstall": "^1.1.0",
     "smooth-scroll": "^1.5.0",
