--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
+  "responsitory": "",
+  "license": "",
   "devDependencies": {
     "assemble": "^0.6.0-beta.5",
     "assemble-mustache": "^0.2.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.7.6",
-    "browserify": "^10.2.1",
-    "browserify-shim": "^3.8.7",
-    "critical": "^0.5.7",
+    "browser-sync": "^2.8.2",
+    "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.10",
+    "critical": "^0.6.0",
     "del": "^1.2.0",
     "domready": "^1.0.8",
-    "flickity-imagesloaded": "^1.0.0",
+    "flickity-imagesloaded": "^1.0.1",
     "grunt": "^0.4.5",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-assemble": "^0.3.2",
-    "gulp-autoprefixer": "^2.3.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-load-plugins": "^1.0.0-rc",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "imager.js": "^0.5.0",
-    "lazysizes": "^1.1.2",
+    "lazysizes": "^1.1.4",
     "picturefill": "^2.3.1",
     "reinstall": "^1.1.0",
-    "smooth-scroll": "^1.5.0",
-    "svg-sprite": "^1.1.2",
-    "svg4everybody": "0.0.2",
-    "vinyl": "^0.4.6",
+    "svg-sprite": "^1.2.7",
+    "svg4everybody": "1.0.0",
+    "vinyl": "^0.5.0",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
