first try on lazy bkg images

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "assemble": "^0.6.0-beta.5",
     "assemble-mustache": "^0.2.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.9.3",
-    "browserify": "^11.1.0",
+    "browser-sync": "^2.9.6",
+    "browserify": "^11.2.0",
     "browserify-shim": "^3.8.10",
     "critical": "^0.6.0",
     "del": "^2.0.2",
@@ -14,7 +14,7 @@
     "flickity-imagesloaded": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-assemble": "^0.3.2",
-    "gulp-autoprefixer": "^3.0.1",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-plumber": "^1.0.1",
@@ -23,11 +23,11 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
     "imager.js": "^0.5.0",
-    "lazysizes": "^1.1.4",
+    "lazysizes": "^1.2.3-rc1",
     "moment": "^2.10.6",
     "picturefill": "^2.3.1",
     "reinstall": "^1.1.0",
-    "svg-sprite": "^1.2.9",
+    "svg-sprite": "^1.2.10",
     "svg4everybody": "^2.0.0",
     "vinyl": "^0.5.0",
     "vinyl-paths": "^2.0.0",
