--- a/package.json
+++ b/package.json
@@ -3,51 +3,51 @@
   "devDependencies": {
     "assemble": "^0.6.0-beta.5",
     "assemble-mustache": "^0.2.1",
-    "autoprefixer": "^5.2.0",
-    "autoprefixer-core": "^5.2.1",
+    "autoprefixer": "^6.0.3",
+    "autoprefixer-core": "^6.0.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.8.1",
+    "browser-sync": "^2.9.7",
     "browserify": "^11.0.1",
     "browserify-shim": "^3.8.10",
     "critical": "^0.6.0",
-    "cssnano": "^2.1.1",
-    "del": "^1.2.0",
+    "cssnano": "^3.2.0",
+    "del": "^2.0.2",
     "domready": "^1.0.8",
     "flickity-imagesloaded": "^1.0.1",
     "grunt": "^0.4.5",
     "gulp": "^3.9.0",
     "gulp-assemble": "^0.3.2",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-cssnano": "^1.1.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-cssnano": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^5.1.10",
+    "gulp-postcss": "^6.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-streamify": "0.0.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.2.0",
-    "handlebars": "^3.0.3",
+    "handlebars": "^4.0.3",
     "imager.js": "^0.5.0",
-    "lazysizes": "^1.1.4",
+    "lazysizes": "^1.2.3-rc1",
     "picturefill": "^2.3.1",
-    "postcss": "^4.1.16",
-    "postcss-cli": "^1.5.0",
-    "postcss-discard-comments": "^1.2.0",
-    "postcss-import": "^6.2.0",
-    "postcss-mixins": "^0.4.0",
-    "postcss-simple-vars": "^0.3.0",
-    "precss": "^0.3.0",
+    "postcss": "^5.0.8",
+    "postcss-cli": "^2.1.0",
+    "postcss-discard-comments": "^2.0.0",
+    "postcss-import": "^7.0.0",
+    "postcss-mixins": "^1.0.1",
+    "postcss-simple-vars": "^1.0.1",
+    "precss": "^1.2.3",
     "reinstall": "^1.1.0",
     "svg-sprite": "^1.2.7",
-    "svg4everybody": "1.0.0",
+    "svg4everybody": "^2.0.0",
     "uglify-js": "^2.4.24",
-    "vinyl": "^0.5.0",
-    "vinyl-paths": "^1.0.0",
+    "vinyl": "^1.0.0",
+    "vinyl-paths": "^2.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watch": "^0.16.0",
-    "webpack": "^1.10.5"
+    "webpack": "^1.12.2"
   },
   "browserify": {
     "transform": [
