--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "picturefill": "^3.0.1",
     "postcss": "^5.0.13",
     "postcss-cli": "^2.3.2",
+    "postcss-comment": "^1.0.2",
     "postcss-discard-comments": "^2.0.2",
     "postcss-import": "^7.1.3",
     "postcss-mixins": "^3.0.2",
