--- a/package.json
+++ b/package.json
@@ -1,54 +1,33 @@
 {
-  "name": "crackle",
   "devDependencies": {
     "assemble": "^0.6.0-beta.5",
-    "assemble-mustache": "^0.2.1",
     "autoprefixer": "^6.2.0",
-    "autoprefixer-core": "^6.0.1",
     "bindpolyfill": "0.0.0",
-    "browser-sync": "^2.10.1",
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.10",
-    "critical": "^0.6.0",
+    "browser-sync": "^2.11.0",
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
     "cssnano": "^3.4.0",
     "del": "^2.0.2",
-    "domready": "^1.0.8",
     "flickity-imagesloaded": "^1.0.1",
-    "grunt": "^0.4.5",
     "gulp": "^3.9.0",
     "gulp-assemble": "^0.3.2",
-    "gulp-autoprefixer": "^3.0.2",
-    "gulp-cssnano": "^2.0.0",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-load-plugins": "^1.0.0-rc",
-    "gulp-plumber": "^1.0.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.2.0",
-    "handlebars": "^4.0.5",
-    "imager.js": "^0.5.0",
-    "lazysizes": "^1.2.3-rc1",
-    "picturefill": "^3.0.1",
-    "postcss": "^5.0.13",
-    "postcss-cli": "^2.3.2",
-    "postcss-comment": "^1.0.2",
-    "postcss-discard-comments": "^2.0.2",
-    "postcss-import": "^7.1.3",
-    "postcss-mixins": "^3.0.2",
-    "postcss-simple-vars": "^1.1.0",
-    "precss": "^1.3.0",
+    "postcss": "^5.0.14",
+    "postcss-cli": "^2.3.3",
+    "precss": "^1.4.0",
     "reinstall": "^1.1.0",
-    "svg-sprite": "^1.2.17",
+    "sanitize.css": "^3.0.0",
     "svg4everybody": "^2.0.0",
     "uglify-js": "^2.6.1",
     "vinyl": "^1.0.0",
     "vinyl-paths": "^2.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watch": "^0.16.0",
-    "webpack": "^1.12.9"
+    "watch": "^0.17.1"
   },
   "browserify": {
     "transform": [
