--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
     "gulp-cssnano": "^2.1.1",
-    "gulp-jshint": "^2.0.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "imports-loader": "^0.6.5",
-    "jshint": "^2.9.1",
     "postcss": "^5.0.18",
     "postcss-cli": "^2.5.0",
     "precss": "^1.4.0",
