checkin before 4th

--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "devDependencies": {
     "assemble": "^0.10.0",
     "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.12.3",
-    "cssnano": "^3.4.0",
-    "del": "^2.2.0",
+    "browser-sync": "^2.13.0",
+    "cssnano": "^3.7.1",
+    "del": "^2.2.1",
     "flickity-imagesloaded": "^1.0.4",
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^2.0.0",
-    "gulp-load-plugins": "^1.2.2",
-    "gulp-postcss": "^6.1.0",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^1.5.4",
     "imports-loader": "^0.6.5",
-    "postcss": "^5.0.18",
-    "postcss-cli": "^2.5.0",
+    "postcss": "^5.0.21",
+    "postcss-cli": "^2.5.2",
     "precss": "^1.4.0",
-    "svg4everybody": "^2.0.3",
-    "uglify-js": "^2.6.2",
+    "scrollreveal": "^3.1.4",
+    "svg4everybody": "^2.1.0",
+    "uglify-js": "^2.6.4",
     "vinyl": "^1.1.1",
     "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
