--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
-    "assemble": "^0.16.1",
-    "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.13.0",
-    "cssnano": "^3.7.1",
-    "del": "^2.2.1",
+    "assemble": "^0.17.1",
+    "autoprefixer": "^6.4.0",
+    "browser-sync": "^2.14.0",
+    "cssnano": "^3.7.4",
+    "del": "^2.2.2",
+    "exports-loader": "^0.6.3",
     "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
@@ -14,15 +15,15 @@
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.4",
+    "gulp-uglify": "^2.0.0",
     "imports-loader": "^0.6.5",
-    "postcss": "^5.1.1",
+    "postcss": "^5.1.2",
     "postcss-cli": "^2.5.2",
     "precss": "^1.4.0",
     "scrollreveal": "^3.3.1",
     "svg4everybody": "^2.1.0",
-    "uglify-js": "^2.6.4",
-    "vinyl": "^1.1.1",
+    "uglify-js": "^2.7.3",
+    "vinyl": "^1.2.0",
     "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
