--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
   "devDependencies": {
-        "assemble": "^0.17.1",
-        "autoprefixer": "^6.4.1",
-        "browser-sync": "^2.15.0",
-        "cssnano": "^3.7.4",
-        "del": "^2.2.2",
-        "exports-loader": "^0.6.3",
-        "flickity-imagesloaded": "^2.0.0",
-        "gulp": "^3.9.1",
-        "gulp-assemble": "^0.3.3",
-        "gulp-cssnano": "^2.1.2",
-        "gulp-eslint": "^3.0.1",
-        "gulp-load-plugins": "^1.3.0",
-        "gulp-postcss": "^6.2.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-streamify": "^1.0.2",
-        "gulp-uglify": "^2.0.0",
-        "imports-loader": "^0.6.5",
-        "postcss": "^5.2.0",
-        "postcss-cli": "^2.6.0",
-        "precss": "^1.4.0",
-        "scrollreveal": "^3.3.1",
-        "svg4everybody": "^2.1.0",
-        "uglify-js": "^2.7.3",
-        "vinyl": "^1.2.0",
-        "vinyl-paths": "^2.1.0",
-        "vinyl-source-stream": "^1.1.0",
+    "assemble": "^0.17.1",
+    "autoprefixer": "^6.4.1",
+    "browser-sync": "^2.15.0",
+    "cssnano": "^3.7.5",
+    "del": "^2.2.2",
+    "exports-loader": "^0.6.3",
+    "flickity-imagesloaded": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-assemble": "^0.3.3",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-postcss": "^6.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^2.0.0",
+    "imports-loader": "^0.6.5",
+    "postcss": "^5.2.0",
+    "postcss-cli": "^2.6.0",
+    "precss": "^1.4.0",
+    "scrollreveal": "^3.3.1",
+    "svg4everybody": "^2.1.0",
+    "uglify-js": "^2.7.3",
+    "vinyl": "^1.2.0",
+    "vinyl-paths": "^2.1.0",
+    "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
   },
   "name": "fizz",
   "description": "fizz ==== Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
