--- a/package.json
+++ b/package.json
@@ -1,41 +1,63 @@
 {
   "devDependencies": {
-    "assemble": "^0.23.0",
-    "autoprefixer": "^6.7.5",
-    "browser-sync": "^2.18.8",
+    "assemble": "^0.24.3",
+    "autoprefixer": "^7.2.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.23.6",
     "cssnano": "^3.8.0",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "exports-loader": "^0.6.3",
     "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
     "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-postcss": "^6.2.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "imports-loader": "^0.7.0",
-    "postcss": "^5.2.15",
-    "postcss-cli": "^2.6.0",
-    "precss": "^1.4.0",
-    "scrollreveal": "^3.3.4",
-    "svg4everybody": "^2.1.0",
-    "uglify-js": "^2.7.3",
-    "vinyl": "^2.0.0",
+    "postcss": "^6.0.16",
+    "postcss-advanced-variables": "^2.3.0",
+    "postcss-cli": "^4.1.1",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^11.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0",
+    "precss": "^3.1.0",
+    "scrollreveal": "^3.3.6",
+    "svg4everybody": "^2.1.9",
+    "uglify-js": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "vinyl": "^2.1.0",
     "vinyl-paths": "^2.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack-stream": "^3.2.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack-stream": "^4.0.0"
   },
   "name": "fizz",
   "description": "fizz ==== Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
-  "dependencies": {},
+  "dependencies": {
+    "gsap": "^1.20.3",
+    "scrollmagic": "^2.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "presets": [
+    "env"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/betheluniversity/fizz.git"
