--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
+    "ajv": "^6.1.1",
+    "animejs": "^2.2.0",
     "gsap": "^1.20.3",
+    "lory.js": "^2.4.0",
     "scrollmagic": "^2.0.5"
   },
   "scripts": {
