--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "assemble": "^0.24.3",
     "autoprefixer": "^7.2.5",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.6",
     "cssnano": "^3.8.0",
@@ -25,6 +28,8 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "imports-loader": "^0.7.0",
+    "lodash-webpack-plugin": "^0.11.4",
+    "lodash.throttle": "^4.1.1",
     "postcss": "^6.0.16",
     "postcss-advanced-variables": "^2.3.0",
     "postcss-cli": "^4.1.1",
@@ -36,12 +41,14 @@
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.0",
     "scrollreveal": "^3.3.6",
+    "stickybits": "^3.1.1",
     "svg4everybody": "^2.1.9",
     "uglify-js": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.1.8",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "vinyl": "^2.1.0",
     "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.1.1",
     "webpack-stream": "^4.0.0"
   },
   "name": "fizz",
@@ -53,6 +60,7 @@
     "animejs": "^2.2.0",
     "gsap": "^1.20.3",
     "lory.js": "^2.4.0",
+    "npm": "^5.7.1",
     "scrollmagic": "^2.0.5"
   },
   "scripts": {
