save before double image blur try

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "assemble": "^0.24.3",
-    "autoprefixer": "^7.2.5",
+    "autoprefixer": "^8.1.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -10,13 +10,13 @@
     "browser-sync": "^2.23.6",
     "cssnano": "^3.8.0",
     "del": "^3.0.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "exports-loader": "^0.6.3",
+    "exports-loader": "^0.7.0",
     "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
@@ -27,40 +27,41 @@
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.0",
-    "imports-loader": "^0.7.0",
+    "imports-loader": "^0.8.0",
     "lodash-webpack-plugin": "^0.11.4",
     "lodash.throttle": "^4.1.1",
-    "postcss": "^6.0.16",
-    "postcss-advanced-variables": "^2.3.0",
-    "postcss-cli": "^4.1.1",
+    "postcss": "^6.0.19",
+    "postcss-advanced-variables": "^2.3.3",
+    "postcss-cli": "^5.0.0",
     "postcss-custom-media": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
-    "precss": "^3.1.0",
-    "scrollreveal": "^3.3.6",
-    "stickybits": "^3.1.1",
+    "precss": "^3.1.2",
+    "scrollreveal": "^3.4.0",
+    "stickybits": "^3.2.0",
     "svg4everybody": "^2.1.9",
-    "uglify-js": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.2",
+    "uglify-js": "^3.3.14",
+    "uglifyjs-webpack-plugin": "^1.2.3",
     "vinyl": "^2.1.0",
     "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^4.1.1",
-    "webpack-stream": "^4.0.0"
+    "webpack-stream": "^4.0.2"
   },
   "name": "fizz",
   "description": "fizz ==== Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
-    "ajv": "^6.1.1",
+    "ajv": "^6.2.1",
     "animejs": "^2.2.0",
     "gsap": "^1.20.3",
-    "lory.js": "^2.4.0",
+    "lory.js": "^2.4.2",
     "npm": "^5.7.1",
+    "npm-check": "^5.5.2",
     "scrollmagic": "^2.0.5"
   },
   "scripts": {
