--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.4.0",
     "browser-sync": "^2.23.6",
     "cssnano": "^3.8.0",
     "del": "^3.0.0",
@@ -59,6 +60,7 @@
   "dependencies": {
     "ajv": "^6.2.1",
     "animejs": "^2.2.0",
+    "babel-preset-es2015": "^6.24.1",
     "gsap": "^1.20.3",
     "lory.js": "^2.4.2",
     "npm": "^5.7.1",
