--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
   "devDependencies": {
-    "assemble": "^0.23.0",
-    "autoprefixer": "^6.7.5",
-    "browser-sync": "^2.18.8",
-    "cssnano": "^3.8.0",
-    "del": "^2.2.2",
-    "exports-loader": "^0.6.3",
+    "assemble": "^0.24.3",
+    "autoprefixer": "^8.6.4",
+    "browser-sync": "^2.24.5",
+    "cssnano": "^3.10.0",
+    "del": "^3.0.0",
+    "exports-loader": "^0.7.0",
     "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-assemble": "^0.3.3",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.3.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^2.0.0",
-    "imports-loader": "^0.7.0",
-    "postcss": "^5.2.15",
-    "postcss-cli": "^2.6.0",
-    "precss": "^1.4.0",
-    "scrollreveal": "^3.3.4",
-    "svg4everybody": "^2.1.0",
-    "uglify-js": "^2.7.3",
-    "vinyl": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
+    "imports-loader": "^0.8.0",
+    "postcss": "^6.0.23",
+    "postcss-cli": "^5.0.1",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-mixins": "^6.2.0",
+    "precss": "^3.1.2",
+    "scrollreveal": "^3.4.0",
+    "svg4everybody": "^2.1.9",
+    "uglify-js": "^3.4.2",
+    "vinyl": "^2.2.0",
     "vinyl-paths": "^2.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack-stream": "^3.2.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack-stream": "^4.0.3"
   },
   "name": "fizz",
   "description": "fizz ==== Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
-  "dependencies": {},
+  "dependencies": {
+    "npm": "^6.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
