--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "imports-loader": "^0.8.0",
+    "object-fit-images": "^3.2.3",
     "postcss": "^6.0.23",
     "postcss-cli": "^5.0.1",
     "postcss-easy-import": "^3.0.0",
