--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "imports-loader": "^0.8.0",
     "lodash-webpack-plugin": "^0.11.4",
     "lodash.throttle": "^4.1.1",
+    "object-fit-images": "^3.2.3",
     "postcss": "^6.0.19",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-cli": "^5.0.0",
