--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "browser-sync": "^2.24.5",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
+    "eslint": "^5.2.0",
+    "eslint-plugin-import": "^2.13.0",
     "exports-loader": "^0.7.0",
     "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
@@ -36,6 +38,7 @@
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
+    "g": "^2.0.1",
     "npm": "^6.1.0"
   },
   "scripts": {
