--- a/package.json
+++ b/package.json
@@ -1,49 +1,71 @@
 {
+  "browserslist": [
+    "> 4%",
+    "last 2 versions",
+    "ie 11"
+  ],
   "devDependencies": {
+    "ajv": "^6.2.1",
     "assemble": "^0.24.3",
-    "autoprefixer": "^8.6.4",
-    "browser-sync": "^2.24.5",
-    "cssnano": "^3.10.0",
+    "autoprefixer": "^9.0.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.4.3",
+    "browser-sync": "^2.23.6",
+    "cssnano": "^4.0.4",
     "del": "^3.0.0",
     "eslint": "^5.2.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "exports-loader": "^0.7.0",
-    "flickity-imagesloaded": "^2.0.0",
-    "gulp": "^3.9.1",
+    "flickity": "^2.1.2",
+    "gulp": "^4.0.0",
     "gulp-assemble": "^0.3.3",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-eslint": "^4.0.2",
+    "gulp-babel": "^7.0.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^5.0.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "imports-loader": "^0.8.0",
-    "object-fit-images": "^3.2.3",
-    "postcss": "^6.0.23",
-    "postcss-cli": "^5.0.1",
+    "lory.js": "^2.4.2",
+    "postcss": "^7.0.1",
+    "postcss-advanced-variables": "^2.3.3",
+    "postcss-cli": "^6.0.0",
+    "postcss-custom-media": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
     "scrollreveal": "^3.4.0",
     "svg4everybody": "^2.1.9",
-    "uglify-js": "^3.4.2",
-    "vinyl": "^2.2.0",
+    "vinyl": "^2.1.0",
     "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^2.0.0",
-    "webpack-stream": "^4.0.3"
+    "webpack": "^4.1.1",
+    "webpack-stream": "^5.0.0"
   },
   "name": "fizz",
-  "description": "fizz ==== Files for responsive site",
+  "description": "fizz === Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
-    "g": "^2.0.1",
-    "npm": "^6.1.0"
+    "npm": "^6.2.0",
+    "npm-check": "^5.7.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "presets": [
+    "env"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/betheluniversity/fizz.git"
