tweaking accordion js and css

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-    "presets": 
-        ["minify", "env"]
+    "presets": [
+        ["minify"],
+        ["env", {
+            "modules": false,
+            "targets": {
+              "browsers": ["> 4%", "last 2 versions", "ie 11"]
+            }
+        }]
+    ]
 } 
