--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "browserslist": [
     "> 4%",
-    "last 2 versions",
+    "last 1 version",
     "ie 11"
   ],
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.55",
     "@babel/register": "^7.0.0-beta.55",
     "ajv": "^6.5.2",
@@ -24,6 +26,7 @@
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
+    "gulp-babel-minify": "^0.4.3",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "lory.js": "^2.5.1",
@@ -32,6 +35,7 @@
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
     "scrollreveal": "^4.0.0",
+    "standard": "^11.0.1",
     "svg4everybody": "^2.1.9",
     "webpack": "^4.16.5",
     "webpack-stream": "^5.1.0"
@@ -41,6 +45,9 @@
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.56",
+    "@babel/runtime": "^7.0.0-beta.56",
+    "babel-loader": "^8.0.0-beta",
     "npm": "^6.3.0",
     "npm-check": "^5.8.0"
   },
