--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^6.5.2",
     "assemble": "^0.24.3",
     "autoprefixer": "^9.1.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-minify": "^0.4.3",
     "browser-sync": "^2.24.6",
     "cssnano": "^4.0.5",
@@ -35,10 +36,10 @@
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
     "scrollreveal": "^4.0.0",
-    "standard": "^11.0.1",
     "svg4everybody": "^2.1.9",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.5",
-    "webpack-stream": "^5.1.0"
+    "webpack-stream": "^5.1.1"
   },
   "name": "fizz",
   "description": "fizz === Files for responsive site",
