--- a/package.json
+++ b/package.json
@@ -1,69 +1,61 @@
 {
   "browserslist": [
     "> 4%",
-    "last 2 versions",
+    "last 1 version",
     "ie 11"
   ],
   "devDependencies": {
-    "ajv": "^6.2.1",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/register": "^7.0.0-beta.55",
+    "ajv": "^6.5.2",
     "assemble": "^0.24.3",
-    "autoprefixer": "^9.0.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "autoprefixer": "^9.1.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-minify": "^0.4.3",
-    "browser-sync": "^2.23.6",
-    "cssnano": "^4.0.4",
+    "browser-sync": "^2.24.6",
+    "cssnano": "^4.0.5",
     "del": "^3.0.0",
-    "eslint": "^5.2.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint": "^5.3.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "exports-loader": "^0.7.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
-    "gulp-assemble": "^0.3.3",
-    "gulp-babel": "^7.0.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^5.0.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
-    "imports-loader": "^0.8.0",
-    "lory.js": "^2.4.2",
-    "postcss": "^7.0.1",
-    "postcss-advanced-variables": "^2.3.3",
-    "postcss-cli": "^6.0.0",
-    "postcss-custom-media": "^6.0.0",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-babel-minify": "^0.4.3",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "lazysizes": "^4.1.0",
+    "lory.js": "^2.5.1",
     "postcss-easy-import": "^3.0.0",
-    "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
-    "precss": "^3.1.2",
-    "scrollreveal": "^3.4.0",
+    "scrollreveal": "^4.0.0",
     "svg4everybody": "^2.1.9",
-    "vinyl": "^2.1.0",
-    "vinyl-paths": "^2.1.0",
-    "vinyl-source-stream": "^2.0.0",
-    "webpack": "^4.1.1",
-    "webpack-stream": "^5.0.0"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.5",
+    "webpack-stream": "^5.1.1"
   },
   "name": "fizz",
   "description": "fizz === Files for responsive site",
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
-    "npm": "^6.2.0",
-    "npm-check": "^5.7.1"
+    "@babel/polyfill": "^7.0.0-beta.56",
+    "@babel/runtime": "^7.0.0-beta.56",
+    "babel-loader": "^8.0.0-beta",
+    "npm": "^6.3.0",
+    "npm-check": "^5.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "presets": [
-    "env"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/betheluniversity/fizz.git"
