--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 .DS_Store
 node_modules
 .idea/
-builds/
-builds
+dist
+dist/
 npm-debug.log
-
-src/assets/images/4040453738_726b240c16_b.jpg
-
-src/assets/images/4040453738_726b240c16_b.jpg
