--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.1",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.55",
@@ -34,12 +34,12 @@
     "lory.js": "^2.5.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-mixins": "^6.2.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0",
-    "scrollreveal": "^4.0.0",
+    "postcss-nested": "^4.1.0",
+    "postcss-simple-vars": "^5.0.1",
+    "scrollreveal": "^4.0.2",
     "svg4everybody": "^2.1.9",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.5",
+    "webpack": "^4.18.1",
     "webpack-stream": "^5.1.1"
   },
   "name": "fizz",
