--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.0.1",
+    "@babel/core": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0-beta.55",
     "ajv": "^6.5.3",
     "assemble": "^0.24.3",
@@ -18,7 +18,7 @@
     "browser-sync": "^2.24.6",
     "cssnano": "^4.0.5",
     "del": "^3.0.0",
-    "eslint": "^5.4.0",
+    "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
@@ -38,8 +38,8 @@
     "postcss-simple-vars": "^5.0.1",
     "scrollreveal": "^4.0.2",
     "svg4everybody": "^2.1.9",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.18.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.19.1",
     "webpack-stream": "^5.1.1"
   },
   "name": "fizz",
