--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ie 11"
   ],
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0-beta.55",
     "ajv": "^6.5.3",
@@ -22,6 +22,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0-beta.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "lazysizes": "^4.1.2",
@@ -39,7 +40,6 @@
   "version": "1.0.0",
   "main": "assemble.config.js",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.56",
     "@babel/runtime": "^7.0.0-beta.56",
     "babel-loader": "^8.0.0-beta",
     "npm": "^6.4.0",
