--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
+    "gulp-cli": "^2.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "lazysizes": "^4.1.2",
